--- a/html and css files/vendorDashboard.html
+++ b/html and css files/vendorDashboard.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadence||Connect</title>
     <link rel="stylesheet" href="dashboard.css" />
+    <link
+      rel="shortcut icon"
+      href="../EMS assets/CADENCE CONNECT LOGO WHITE.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container">
@@ -22,11 +27,24 @@
               <li><a href="#">FAQ</a></li>
             </ul>
 
-            <ul class="signin-upwrap">
-              <li><a href="../index.html">log out</a></li>
-              |
-              <li><a href="">Dashboard</a></li>
+            <ul class="profile-circle">
+              <figure>
+                <img
+                  src="../EMS assets/profile-circle.svg"
+                  height=""
+                  width=""
+                />
+              </figure>
+              <p>profile</p>
+              <figure class="arrowD">
+                <img src="../EMS assets/arrow-down.svg" alt="" />
+              </figure>
             </ul>
+            <div class="profileClicked d-None">
+              <p><a href="./vendorDashboard2.html"> Dashboard</a></p>
+              <p><a href="#">Settings</a></p>
+              <p><a href="../index.html">Log Out</a></p>
+            </div>
           </div>
         </nav>
         <div class="hero-main">
@@ -199,315 +217,6 @@
         </ul>
         <!-- section of mainBelowHero -->
         <div class="event-cards">
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
-          <!--  -->
-          <article>
-            <figure>
-              <img
-                src="../EMS assets/repeated-pic EMS.jfif"
-                class="ScaleiImg"
-                alt=""
-              />
-            </figure>
-            <div class="eleg-star">
-              <div class="eleg-star-rate">
-                <h3>Elegant weddings Co.</h3>
-                <figure class="elegstarFig">
-                  <img src="../EMS assets/veeerifygreen.svg" alt="" />
-                </figure>
-
-                <figure class="starred5">
-                  <p>(5.0)</p>
-                  <img src="../EMS assets/rateStar.svg" alt="" />
-                </figure>
-              </div>
-            </div>
-            <p class="category-weddingTxt">
-              Specializes in crafting exquisite weddings tailored to your style
-              and vision. From intimate ceremonies to lavish receptions...
-            </p>
-            <span class="viewMore">view more</span>
-          </article>
-
-          <!--  -->
-
           <!--  -->
           <article>
             <figure>
@@ -699,6 +408,26 @@
         <figure class="navigateBtn">
           <img src="../EMS assets/addNavigateButton.svg" alt="" />
         </figure>
+        <div class="navigateIcon d-None">
+          <li>
+            <a href=""><img src="../EMS assets/messages-2.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="../EMS assets/chatIConNotification.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="../EMS assets/chatIconMessage.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="../EMS assets/chatIconSettings.svg" alt=""
+            /></a>
+          </li>
+        </div>
       </main>
       <!-- NEXT -->
       <div class="nextPageWrap">
@@ -742,5 +471,18 @@
         </div>
       </footer>
     </div>
+    <script>
+      // profile click
+      document
+        .querySelector(".profile-circle")
+        .addEventListener("click", () => {
+          document.querySelector(".profileClicked").classList.toggle("d-None");
+        });
+
+      // navigate Button
+      document.querySelector(".navigateBtn").addEventListener("click", () => {
+        document.querySelector(".navigateIcon").classList.toggle("d-None");
+      });
+    </script>
   </body>
 </html>
